Made the menu page responsive, fixed an alignment issue in the meal item card, and fixed an overflow issue in the dashboard pages

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ header, footer {
 }
 
 ul {
-    list-style-type: none;
+    list-style: none;
 }
 
 a {
