--- a/src/layouts/MealItem/styles.css
+++ b/src/layouts/MealItem/styles.css
@@ -2,6 +2,7 @@
     background-color: #fff;
     border-radius: 1rem;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16), 0 2px 6px rgba(0, 0, 0, 0.23);
+    list-style-type: none;
     margin: 0 1rem;
     padding: 1.5rem 2rem;
     position: relative;
